--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -22,11 +22,13 @@
     <ClCompile Include="device.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="pipeline.cpp" />
+    <ClCompile Include="swap_chain.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="device.hpp" />
     <ClInclude Include="pipeline.hpp" />
+    <ClInclude Include="swap_chain.hpp" />
     <ClInclude Include="window.hpp" />
   </ItemGroup>
   <ItemGroup>
