--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -21,19 +21,43 @@
   <ItemGroup>
     <ClCompile Include="device.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="model.cpp" />
     <ClCompile Include="pipeline.cpp" />
+    <ClCompile Include="runner.cpp" />
     <ClCompile Include="swap_chain.cpp" />
     <ClCompile Include="window.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="device.hpp" />
+    <ClInclude Include="model.hpp" />
     <ClInclude Include="pipeline.hpp" />
+    <ClInclude Include="runner.hpp" />
     <ClInclude Include="swap_chain.hpp" />
     <ClInclude Include="window.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Shaders\simple_shader.frag" />
-    <None Include="Shaders\simple_shader.vert" />
+    <CustomBuild Include="Shaders\simple_shader.frag">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslc.exe $(SolutionDir)\Engine\Shaders\simple_shader.frag -o $(SolutionDir)\Engine\Shaders\simple_shader.frag.svt</Command>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslc.exe $(SolutionDir)\Engine\Shaders\simple_shader.frag -o $(SolutionDir)\Engine\Shaders\simple_shader.frag.svt</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling fragment shaders</Message>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling fragment shaders</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">simple_shader.frag.svt;%(Outputs)</Outputs>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">simple_shader.frag.svt;%(Outputs)</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="Shaders\simple_shader.vert">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+      <FileType>Document</FileType>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">false</ExcludedFromBuild>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">glslc.exe $(SolutionDir)\Engine\Shaders\simple_shader.vert -o $(SolutionDir)\Engine\Shaders\simple_shader.vert.svt</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Compiling vertex shaders</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">simple_shader.vert.svt</Outputs>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|x64'">glslc.exe $(SolutionDir)\Engine\Shaders\simple_shader.vert -o $(SolutionDir)\Engine\Shaders\simple_shader.vert.svt</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Compiling vertex shaders</Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|x64'">simple_shader.vert.svt</Outputs>
+    </CustomBuild>
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
